--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "mongodb": "^4.0.1",
+    "mongoose": "^5.13.3",
+    "node": "^16.5.0",
+    "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "vue": "^3.0.4"
   },
   "devDependencies": {
